Steps by user
